tests/opaque_generics/opaque_generics.exp
Error --------------------------------------------- importtest-polarity.js:10:12

Cannot return `x` because in type argument `T`, string [1] is incompatible with
number [2].


Error --------------------------------------------- importtest-polarity.js:18:12

Cannot return `x` because in type argument `T`, number [1] is incompatible with
string [2].


Error --------------------------------------------- importtest-polarity.js:26:12

Cannot return `x` because in type argument `T`, number [1] is incompatible with
string [2].


Error --------------------------------------------- importtest-polarity.js:30:12

Cannot return `x` because in type argument `T`, string [1] is incompatible with
number [2].


Error: importtest-polarity.js:39
 39:     return x;
                ^ All. This type is incompatible with the expected return type of
 38: function test9(x: All<number, number | string, number | string>) : All<number | string, number, number | string | null> { // Errors: number != number | string (invariant), number | string ~> number (covariant), number | string ~> number | string | null (contravariant)
                                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ All
  Type argument `U` is incompatible:
     38: function test9(x: All<number, number | string, number | string>) : All<number | string, number, number | string | null> { // Errors: number != number | string (invariant), number | string ~> number (covariant), number | string ~> number | string | null (contravariant)
                                                                                                                           ^^^^ null. This type is incompatible with
     38: function test9(x: All<number, number | string, number | string>) : All<number | string, number, number | string | null> { // Errors: number != number | string (invariant), number | string ~> number (covariant), number | string ~> number | string | null (contravariant)
                                                        ^^^^^^^^^^^^^^^ union: number | string
      Member 1:
       38: function test9(x: All<number, number | string, number | string>) : All<number | string, number, number | string | null> { // Errors: number != number | string (invariant), number | string ~> number (covariant), number | string ~> number | string | null (contravariant)
                                                          ^^^^^^ number
      Error:
       38: function test9(x: All<number, number | string, number | string>) : All<number | string, number, number | string | null> { // Errors: number != number | string (invariant), number | string ~> number (covariant), number | string ~> number | string | null (contravariant)
                                                                                                                             ^^^^ null. This type is incompatible with
       38: function test9(x: All<number, number | string, number | string>) : All<number | string, number, number | string | null> { // Errors: number != number | string (invariant), number | string ~> number (covariant), number | string ~> number | string | null (contravariant)
                                                          ^^^^^^ number
      Member 2:
       38: function test9(x: All<number, number | string, number | string>) : All<number | string, number, number | string | null> { // Errors: number != number | string (invariant), number | string ~> number (covariant), number | string ~> number | string | null (contravariant)
                                                                   ^^^^^^ string
      Error:
       38: function test9(x: All<number, number | string, number | string>) : All<number | string, number, number | string | null> { // Errors: number != number | string (invariant), number | string ~> number (covariant), number | string ~> number | string | null (contravariant)
                                                                                                                             ^^^^ null. This type is incompatible with
       38: function test9(x: All<number, number | string, number | string>) : All<number | string, number, number | string | null> { // Errors: number != number | string (invariant), number | string ~> number (covariant), number | string ~> number | string | null (contravariant)
                                                                   ^^^^^^ string

Error --------------------------------------------- importtest-polarity.js:39:12

Cannot return `x` because:
 - in type argument `S`, number [1] is incompatible with string [2].
 - in type argument `T`, string [3] is incompatible with number [4].


Error ------------------------------------------------------- importtest.js:7:12

Cannot return `x` because in type argument `T`, string [1] is incompatible with
number [2].


Error ------------------------------------------------------ importtest.js:15:12

Cannot return `x` because in type argument `T`, string [1] is incompatible with
number [2].


Error ------------------------------------------------------ importtest.js:23:12

Cannot return `x` because `Container` [1] is incompatible with `Box` [2].


Error ------------------------------------------------------ importtest.js:27:12

Cannot return `x` because `Box` [1] is incompatible with `Container` [2].


Error --------------------------------------------------- test-polarity.js:12:28

Cannot use `T` [1] in an output position because `T` [1] is expected to occur
only in input positions.


Error --------------------------------------------------- test-polarity.js:13:28

Cannot use `T` [1] in an input position because `T` [1] is expected to occur
only in output positions.


Error --------------------------------------------------- test-polarity.js:14:28

Cannot use `T` [1] in an input/output position because `T` [1] is expected to
occur only in input positions.


Error --------------------------------------------------- test-polarity.js:15:28

Cannot use `T` [1] in an input/output position because `T` [1] is expected to
occur only in output positions.


Error ------------------------------------------------------------- test.js:7:12

Cannot return `x` because in type argument `T`, string [1] is incompatible with
number [2].


Error ------------------------------------------------------------ test.js:15:12

Cannot return `x` because in type argument `T`, string [1] is incompatible with
number [2].



Found 17 errors
